--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,12 +1,45 @@
-.header{
-    flex:1;
+.header {
+    flex: 1;
     flex-direction: row;
     background-color: #2F576D;
-    color:white;
-}.txtHeader{
-    text-align:left;
-}.txtHeader:nthchild(2){
-    text-align:right;
-}html{
-    
+    color: white;
+}
+
+.txtHeader {
+    text-align: left;
+}
+
+.txtHeader:nthchild(2) {
+    text-align: right;
+}
+.boxTable {
+    overflow: auto;
+}
+
+.boxTable::-webkit-scrollbar {
+    width: 12px;
+    /* width of the entire scrollbar */
+}
+
+.boxTable::-webkit-scrollbar-track {
+    background: white;
+    /* color of the tracking area */
+}
+
+.boxTable::-webkit-scrollbar-thumb {
+    background-color: #244354;
+}
+
+Body::-webkit-scrollbar {
+    width: 12px;
+    /* width of the entire scrollbar */
+}
+
+Body::-webkit-scrollbar-track {
+    background: white;
+    /* color of the tracking area */
+}
+
+Body::-webkit-scrollbar-thumb {
+    background-color: #244354;
 }
